--- a/Web-Dev/Sep-09/index.html
+++ b/Web-Dev/Sep-09/index.html
@@ -10,8 +10,8 @@
     <div>
         <p class="description">this is the text content</p>
         <button id="btn1">Button 1</button>
-        <button>Button 2</button>
-        <button>Button 3</button>
+        <button id="btn2">Button 2</button>
+        <button id="btn3">Button 3</button>
     </div>
 
     <script src="script.js">  </script>
